--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 
-
-spring.datasource.url=jdbc:mysql://namdevops4.conygre.com:3306/portfolio?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=conygre
-spring.datasource.password=C0nygre-C0nygre
+spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=c0nygre
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 #server.port=8081
 
 #logging.level.com.conygre.spring.boot.rest=${level}
-
 
 logging.file=myapplication.log
